[project]
name = "oauth-gradio-hf-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.2",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "gradio>=5.43.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
